--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <p>
-        Hola profesor este es mi sitio web
-        sigueme en twitter @panchhossj 
+        Hola profesor este es mi primer repositorio en github 
+        sigueme en instagram @panchhossj 
     </p>
 </body>
 </html>
